--- a/style.css
+++ b/style.css
@@ -661,7 +661,11 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
+}
+
+.footer-link-color a {
+    color: #FAFAFA;
 }
 
 .container {
@@ -687,7 +691,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 
 .tight-width-whitespace {
@@ -715,7 +719,7 @@ p {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 25px;
     line-height: 1.4em;
 }
 
@@ -745,7 +749,8 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
+.white,
+.white a {
     color: #FFFFFF!important;
 }
 
@@ -822,10 +827,6 @@ h4 {
 
 .bg-dots-bg {
     background-image: url("img/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
