--- a/style.css
+++ b/style.css
@@ -47,7 +47,12 @@ a:hover {
 
 #footer-partners-title{
     font-size: 15px;
-    text-decoration: underline;
+}
+
+hr{
+    width: 90px;
+    margin-top: 0;
+
 }
 
 .bloc {
@@ -847,7 +852,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 
